--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,24 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:gravity="center_vertical|center_horizontal"/>
+
     <EditText
+            android:id="@+id/ipAddressField"
             android:layout_width="353dp"
             android:layout_height="43dp"
-            android:inputType="textPersonName"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:ems="10"
-            android:id="@+id/ipAddressField" android:layout_marginTop="28dp"
-            app:layout_constraintTop_toBottomOf="@+id/statusLabl" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:hint="Enter broker address" app:layout_constraintHorizontal_bias="0.533"/>
+            android:hint="Enter broker address"
+            android:inputType="textPersonName"
+            android:text="192.168.4.1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.533"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/statusLabl" />
     <EditText
             android:layout_width="241dp"
             android:layout_height="41dp"
@@ -36,18 +44,22 @@
             android:hint="Enter a message"
             app:layout_constraintStart_toStartOf="@+id/topicField" android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/topicField"/>
+
     <EditText
+            android:id="@+id/topicField"
             android:layout_width="353dp"
             android:layout_height="41dp"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/topicField"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
+            android:layout_marginRight="16dp"
+            android:ems="10"
             android:hint="Enter Topic to subscribe or listen"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/ipAddressField"
+            android:inputType="textPersonName"
+            android:text="IMU/pitch"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/ipAddressField"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintTop_toBottomOf="@+id/ipAddressField" />
     <Button
             android:text="Send"
             android:background="#c9f788"
